# Ad_Trackr

./: .env.example  .gitignore  YOUTUBE_WORKFLOW_README.md  analyses_detaillees_notebook.md  debug_mongodb.py  docker-compose-clean.yml  docker-compose.arm64.yml  docker-compose.yml  docker-compose.yml.backup  hadoop.env  hdfs_to_metabase.py  influenceurs_youtube_etl.py  init-postgres.sh  requirements.txt  run_etl_spark.py  run_youtube_extractor.py  start_youtube_workflow.sh  test_docker_setup.py  youtube_extractor_to_mongo.py
config/: mongo-init.js
dags/: youtube_pipeline_dag.py
mongo-init/: init-mongo.js
myflow/: .gitignore  Dockerfile  README.md  REORGANIZATION_SUMMARY.md  influenceurs_youtube_etl.py  pyproject.toml  requirements.txt  run_etl_spark.py  setup.py  test_api_extraction.py  test_complete_spark_etl.py  youtube_extractor_to_mongo.py
myflow/docs/: ARCHITECTURE.md  YOUTUBE_INTEGRATION_SUMMARY.md  YOUTUBE_WORKFLOW_GUIDE.md
myflow/examples/: infrastructure_example.py  simple_example.py  youtube_ingestion_workflow.py
myflow/myflow_lib/: __init__.py
myflow/myflow_lib/core/: __init__.py  dag.py  scheduler.py  task.py
myflow/myflow_lib/executors/: __init__.py  parallel_executor.py  sequential_executor.py
myflow/myflow_lib/operators/: __init__.py  base_operator.py  bash_operator.py  http_operator.py  operator_factory.py  python_operator.py  youtube_operator.py
myflow/myflow_lib/utils/: __init__.py  config.py  logger.py
myflow/scripts/: run_examples.py  run_tests.py  run_youtube_workflow.sh  test_youtube_workflow.py
myflow/tests/: __init__.py
myflow/tests/integration/: __init__.py  test_infrastructure_check.py
myflow/tests/unit/: __init__.py  test_dag.py  test_task.py
notebooks/: Youtube_ETL_Pipeline.ipynb
old/: analysis_sectors_by_location.ipynb  influencer_analyzer.py  youtube_api_test.py  youtube_raw_extractor_v2.py
scripts/: interactive_trends.py  spark_mongo_to_hdfs_optimized.py  youtube_cat_trend_safe.py
streamlit/: Dockerfile
